Don't show category splits in payees and tags view

BUG: 440111
FIXED-IN: 5.1.3